# trainable

./: .dockerignore  .env  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  deployment.md  development.md  docker-compose.override.yml  docker-compose.yml  initialize_data.py  pyproject.toml  wsgi.py
app/: __init__.py  config.py  consts.py  decorators.py  events.py  init_db.py  models.py  utils.py
app/admin/: __init__.py  forms.py
app/auth/: __init__.py  forms.py
app/base/: __init__.py
app/routes/: __init__.py
app/routes/admin/: __init__.py  forms.py
app/routes/auth/: __init__.py  forms.py
app/routes/base/: __init__.py  utils.py
app/routes/staff/: __init__.py  forms.py
app/routes/staff/routes/: __init__.py  assessments.py  courses.py
app/staff/: __init__.py  forms.py
app/static/css/: main.css
app/templates/: form_helpers.html  index.html
app/templates/admin/: assign_user_permission.html  assign_user_permissions.html  base.html  panel.html  register_user.html  user_details.html
app/templates/auth/: change_password.html  login.html  profile.html
app/templates/base/: about.html  course.html  course_lesson.html  dashboard.html  home.html
app/templates/includes/: footer.html  nav.html
app/templates/staff/: add_new_assessment.html  add_new_course.html  add_new_lesson.html  assign_course_lesson.html  assign_course_user.html  assign_user_course.html  base.html  panel.html
migrations/versions/: 3c4a223bac47_add_attachment_model.py  4e86c8fbf21f_add_model_user_course_lessonv_and_.py  adefc7e06c06_update_model_user_course.py  d95962308464_initial_migration.py  f879ecb18bd9_initial_migration.py
scripts/: format.sh  prestart.sh
